--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -3,28 +3,28 @@ name: Deploy Supabase Edge Functions
 on:
   push:
     branches:
-      - main  # or the branch you use
+      - main  # Trigger only on push to main branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: 📥 Checkout Code
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: 🧰 Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - name: Install Supabase CLI (official method)
+      - name: 🛠 Install Supabase CLI
         uses: supabase/setup-cli@v1
         with:
           version: latest
 
-      - name: Login to Supabase
+      - name: 🔐 Login to Supabase CLI
         run: supabase login --token ${{ secrets.SUPABASE_ACCESS_TOKEN }}
 
-      - name: Deploy aggregate-modbus function
+      - name: 🚀 Deploy Edge Function (aggregate-modbus)
         run: supabase functions deploy aggregate-modbus --project-ref xullgeycueouyxeirrqs
