--- a/.github/workflows/deploy-optimize-energy.yml
+++ b/.github/workflows/deploy-optimize-energy.yml
@@ -24,9 +24,8 @@ jobs:
           mkdir -p ~/.supabase
           echo "${{ secrets.SUPABASE_ACCESS_TOKEN }}" > ~/.supabase/access-token
 
-      - name: 🚀 Deploy Function
+      - name: 🚀 Deploy optimize-energy Function
         run: |
           npx supabase functions deploy optimize-energy --project-ref ${{ secrets.SUPABASE_PROJECT_REF }}
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-
