--- a/modbus-agent/package.json
+++ b/modbus-agent/package.json
@@ -1,14 +1,15 @@
-
 {
   "name": "modbus-agent",
   "version": "1.0.0",
+  "description": "Agent to read Modbus data and upload to Supabase",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.0.0",
-    "dotenv": "^16.0.0",
-    "modbus-serial": "^8.0.16"
+    "modbus-serial": "^9.0.8",
+    "dotenv": "^16.3.1",
+    "@supabase/supabase-js": "^2.49.1"
   }
 }
