--- a/modbus-agent/package.json
+++ b/modbus-agent/package.json
@@ -1,15 +1,22 @@
 {
   "name": "modbus-agent",
   "version": "1.0.0",
-  "description": "Agent to read Modbus data and upload to Supabase",
+  "description": "Agent that reads data from Modbus TCP and uploads it to Supabase",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
+  "keywords": ["modbus", "supabase", "ems", "iot"],
+  "author": "EdgeControl",
+  "license": "MIT",
   "dependencies": {
-    "modbus-serial": "^9.0.8",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
+    "modbus-serial": "^9.3.5",
     "@supabase/supabase-js": "^2.49.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
