--- a/.github/workflows/deploy-agent.yml
+++ b/.github/workflows/deploy-agent.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy Modbus Agent
+name: Build and Deploy Modbus Agent to DockerHub
 
 on:
   push:
@@ -7,20 +7,27 @@ on:
       - '.github/workflows/deploy-agent.yml'
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: ⬇️ Checkout Code
+      - name: 📦 Checkout Code
         uses: actions/checkout@v3
 
       - name: 🐳 Set up Docker
         uses: docker/setup-buildx-action@v2
 
-      - name: 📦 Build Docker Image
-        run: |
-          docker build -t modbus-agent ./modbus-agent
+      - name: 🔐 Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: 🧪 Run container locally (simulation test)
-        run: |
-          docker run --env-file ./modbus-agent/.env modbus-agent
+      - name: 🏗️ Build Docker Image
+        run: docker build -t modbus-agent ./modbus-agent
+
+      - name: 🏷️ Tag Image for DockerHub
+        run: docker tag modbus-agent ${{ secrets.DOCKERHUB_USERNAME }}/modbus-agent:latest
+
+      - name: 🚀 Push to DockerHub
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/modbus-agent:latest
