--- a/.github/workflows/evaluate-fdd-rules.yml
+++ b/.github/workflows/evaluate-fdd-rules.yml
@@ -2,13 +2,15 @@ name: Run FDD Rule Evaluation
 
 on:
   schedule:
-    - cron: '*/10 * * * *' # every 10 minutes
+    - cron: '*/10 * * * *' # Every 10 minutes
   workflow_dispatch:
 
 jobs:
   evaluate:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Invoke Supabase Edge Function
-        run: curl -X POST "${{ secrets.SUPABASE_URL }}/functions/v1/evaluate-fdd-rules" \
-               -H "Authorization: Bearer ${{ secrets.SUPABASE_ANON_KEY }}"
+      - name: 📡 Invoke Supabase Edge Function
+        run: |
+          curl -X POST "${{ secrets.SUPABASE_URL }}/functions/v1/evaluate-fdd-rules" \
+            -H "Authorization: Bearer ${{ secrets.SUPABASE_API_KEY }}"
