--- a/modbus-agent/package.json
+++ b/modbus-agent/package.json
@@ -1,14 +1,14 @@
 {
   "name": "modbus-agent",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "modbus-serial": "^8.0.7",
-    "@supabase/supabase-js": "^2.39.7"
+    "modbus-serial": "^9.0.4",
+    "@supabase/supabase-js": "^2.0.0",
+    "dotenv": "^16.0.3"
   }
 }
