--- a/modbus-agent/package.json
+++ b/modbus-agent/package.json
@@ -7,8 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "modbus-serial": "^9.0.4",
-    "@supabase/supabase-js": "^2.0.0",
-    "dotenv": "^16.0.3"
+    "modbus-serial": "^9.0.5",
+    "dotenv": "^16.4.5",
+    "@supabase/supabase-js": "^2.49.1"
   }
 }
