--- a/.github/workflows/evaluate-fdd-rules.yml
+++ b/.github/workflows/evaluate-fdd-rules.yml
@@ -10,7 +10,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: 📦 Checkout Code
+        uses: actions/checkout@v3
+
+      - name: 🔐 Set up environment variables
+        run: |
+          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> $GITHUB_ENV
+          echo "SUPABASE_API_KEY=${{ secrets.SUPABASE_API_KEY }}" >> $GITHUB_ENV
+
       - name: 📡 Invoke Supabase Edge Function
         run: |
-          curl -X POST "${{ secrets.SUPABASE_URL }}/functions/v1/evaluate-fdd-rules" \
-            -H "Authorization: Bearer ${{ secrets.SUPABASE_API_KEY }}"
+          curl -X POST "${{ env.SUPABASE_URL }}/functions/v1/evaluate-fdd-rules" \
+            -H "Authorization: Bearer ${{ env.SUPABASE_API_KEY }}"
