--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node modbus-agent/modbusReader.js"  // Add start script to run the agent
+    "start": "node modbus-agent/modbusReader.js"
   },
   "dependencies": {
-    "modbus-serial": "^9.0.6", // Ensure modbus-serial is here
+    "modbus-serial": "^9.0.6",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
