--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-project-name",
+  "name": "modbus-agent",  // Add the project name here
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,7 @@
     "start": "node modbus-agent/modbusReader.js"  // Add start script to run the agent
   },
   "dependencies": {
-    "modbus-serial": "^9.0.6", // Ensure modbus-serial is here
+    "modbus-serial": "^9.0.6",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
