--- a/.github/workflows/run-modbus-agent.yml
+++ b/.github/workflows/run-modbus-agent.yml
@@ -24,5 +24,8 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Build the project
+      run: npm run build
+
     - name: Run Modbus Agent
       run: node modbus-agent/modbusReader.js
