--- a/.github/workflows/run-modbus-agent.yml
+++ b/.github/workflows/run-modbus-agent.yml
@@ -19,13 +19,16 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '20.x'
+        node-version: '16'
+
+    - name: Remove node_modules
+      run: rm -rf node_modules
+
+    - name: Clear npm cache
+      run: npm cache clean --force
 
     - name: Install dependencies
       run: npm install
 
-    - name: Build the project
-      run: npm run build
-
     - name: Run Modbus Agent
-      run: node modbus-agent/modbusReader.js
+      run: npm start
