--- a/.github/workflows/run-modbus-agent.yml
+++ b/.github/workflows/run-modbus-agent.yml
@@ -27,6 +27,9 @@ jobs:
     - name: Clear npm cache
       run: npm cache clean --force
 
+    - name: Delete package-lock.json
+      run: rm package-lock.json
+
     - name: Install dependencies
       run: npm install
 
