feat: enhance system reliability and monitoring\n\n- Add health checks to all services\n- Implement resource limits for containers\n- Improve networking configuration\n- Add security features to MQTT broker\n- Enhance database schema with audit logging\n- Update frontend error handling\n- Add system status monitoring

--- a/mqtt-broker/config/mosquitto.conf
+++ b/mqtt-broker/config/mosquitto.conf
@@ -1,19 +1,44 @@
-
 # MQTT Configuration
 listener 1883
 protocol mqtt
 
+listener 8883
+protocol mqtt
+certfile /mosquitto/certs/server.crt
+keyfile /mosquitto/certs/server.key
+cafile /mosquitto/certs/ca.crt
+
 listener 9001
 protocol websockets
+certfile /mosquitto/certs/server.crt
+keyfile /mosquitto/certs/server.key
+cafile /mosquitto/certs/ca.crt
 
-# Authentication (disabled for development)
-allow_anonymous true
+# Security
+allow_anonymous false
+password_file /mosquitto/config/passwd
+acl_file /mosquitto/config/acl
 
 # Persistence settings
 persistence true
 persistence_location /mosquitto/data/
+persistence_file mosquitto.db
+autosave_interval 900
+autosave_on_changes true
+
+# Performance
+max_queued_messages 1000
+max_inflight_messages 100
+max_queued_bytes 1000000
+message_size_limit 1048576
+max_keepalive 60
+retry_interval 20
+max_connections -1
 
 # Log settings
 log_dest file /mosquitto/log/mosquitto.log
+log_type warning
+log_timestamp true
+log_timestamp_format %Y-%m-%d %H:%M:%S
+connection_messages true
 log_dest stdout
-log_type all
