--- a/modbus-agent/package.json
+++ b/modbus-agent/package.json
@@ -62,6 +62,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.49.3",
     "react-resizable-panels": "^2.0.7",
     "react-router-dom": "^6.22.1",
