feat: update environment config and implement Supabase integration

--- a/modbus-agent/.env
+++ b/modbus-agent/.env
@@ -12,4 +12,6 @@ DEVICE_ID=modbus-device-001
 POLL_INTERVAL_MS=5000
 
 # Node environment
-NODE_ENV=production
+NODE_ENV=development
+VITE_SUPABASE_URL=your_supabase_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
