--- a/modbus-agent/package.json
+++ b/modbus-agent/package.json
@@ -67,7 +67,7 @@
     "react-resizable-panels": "^2.0.7",
     "react-router-dom": "^6.22.1",
     "recharts": "^2.12.0",
-    "sonner": "^1.4.0",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
@@ -84,6 +84,7 @@
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^9.24.0",
