--- a/modbus-agent/package.json
+++ b/modbus-agent/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.19",
+    "@types/qrcode.react": "^1.0.5",
     "async-retry": "^1.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -59,6 +60,7 @@
     "modbus-serial": "^8.0.13",
     "morgan": "^1.10.0",
     "next-themes": "^0.2.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
