--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "start": "node modbus-agent/modbusReader.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -51,8 +55,9 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "commander": "^11.1.0",
-    "date-fns": "^3.3.1",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.0",
+    "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.294.0",
@@ -66,13 +71,14 @@
     "react-motion": "^0.5.2",
     "react-resizable-panels": "^2.0.7",
     "react-router-dom": "^6.22.1",
-    "recharts": "^2.12.0",
+    "recharts": "^2.15.2",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.161.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
+    "yup": "^1.6.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
