--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "@tanstack/react-query": "^5.17.19",
     "@types/react-motion": "^0.0.34",
+    "@types/react-window": "^1.8.8",
     "@types/uuid": "^9.0.8",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -72,6 +73,7 @@
     "react-motion": "^0.5.2",
     "react-resizable-panels": "^2.0.7",
     "react-router-dom": "^6.22.1",
+    "react-window": "^1.8.11",
     "recharts": "^2.12.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
