feat: update project structure and fix TypeScript configuration

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-context-menu": "^2.1.5",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
@@ -40,15 +40,16 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "@react-three/drei": "^9.97.6",
     "@react-three/fiber": "^8.15.16",
     "@supabase/supabase-js": "^2.39.7",
     "@tanstack/react-query": "^5.17.19",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-motion": "^0.0.34",
     "@types/react-window": "^1.8.8",
     "@types/uuid": "^9.0.8",
@@ -67,8 +68,10 @@
     "next-themes": "^0.2.1",
     "onnxruntime-node": "^1.16.3",
     "react": "^18.2.0",
+    "react-datepicker": "^8.3.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.49.3",
     "react-motion": "^0.5.2",
     "react-resizable-panels": "^2.0.7",
