--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-hot-toast": "^2.5.2",
     "react-motion": "^0.5.2",
     "react-resizable-panels": "^2.0.7",
     "react-router-dom": "^6.22.1",
